--- a/package.json
+++ b/package.json
@@ -3,12 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "bin": {
+    "gulp": "./bin/gulp",
+    "nodemon": "./bin/nodemon"
+  },
   "dependencies": {
-    "express": "^4.14.0"
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "classnames": "^2.2.5",
+    "express": "^4.14.0",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-sass": "^2.3.2",
+    "jquery": "^3.1.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "webpack-stream": "^3.2.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js"
+    "dev": "gulp",
+    "server": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
